delete class Database, update logic of Task Manager, add interfaces